--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ node_js:
   - '7'
   - '8'
 before_install:
-  - npm install -g yarn
+  - npm install -g yarn codecov
 install:
   - yarn install
 script:
   - yarn lint
-  - yarn test -- --verbose
+  - yarn test -- --verbose && codecov
