--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mirage-openapi",
-  "version": "0.0.0-alpha.2",
+  "version": "0.0.0-alpha.3",
   "description": "Mock OpenAPI responses in ember-cli-mirage",
   "main": "lib/index.js",
   "scripts": {
@@ -9,8 +9,7 @@
     "prepublish": "yarn run build && yarn test",
     "lint": "eslint ./",
     "test": "jest --coverage",
-    "test:watch": "jest --coverage=false --watch",
-    "generate": "node lib/index.js"
+    "test:watch": "jest --coverage=false --watch"
   },
   "repository": {
     "type": "git",
@@ -57,6 +56,7 @@
     "jest": "^20.0.4"
   },
   "peerDependencies": {
+    "ember-browserify": "^1.2.0",
     "ember-cli-mirage": "^0.3.4"
   }
 }
